<resources>
    <string name="app_name">7家租客</string>
    <string name="title_activity_list">7家租客花费清单</string>

    <string name="fix_data">修改数据</string>
    <string name="statistics_data">结算</string>

    <string name="title_add">增加花费</string>
    <string name="title_fix">修改数据</string>
    <string name="title_detail">花费详情</string>
    <string name="title_settlement">花费结算</string>
    <string name="title_settlement_detail">结算详情</string>

    <string name="hint_name">花费名称</string>
    <string name="hint_spend">花费金额</string>

    <string name="btn_add">确认添加</string>
    <string name="btn_fix">确认修改</string>
    <string name="btn_delete">删除</string>

    <string name="check_settled">已结算</string>
    <string name="check_not_settle">未结算</string>
    <string name="settled">结算</string>

    <string name="percapita">人均花费：%.2f 元</string>

    <string name="tips_less_than_one">选中人数不能小于1</string>

    <string name="not_empty">%s不能为空</string>

    <string name="total">总价：%.2f 元</string>

    <string name="everyone_spend">%s：%.2f 元</string>

    <string name="list_item_title">%s\t\t\t\t\t\t名称：%s</string>

    <string name="dialog_title">请输入管理密码！</string>
    <string name="dialog_agent_title">请选择经办人</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <string name="passwd_error">密码错误！！！</string>

    <string name="settlement_start">开始日期：%s</string>
    <string name="settlement_end">结束日期：%s</string>
    <string name="settlement_detail">结算详情</string>

    <string name="menu_settlement">全部结算</string>
    <string name="menu_reverse_settlement">全部取消结算</string>

    <string name="all">全部</string>

    <string name="agent_empty">经办人：未设置</string>
    <string name="agent_detail">经办人：%s</string>
    <string name="agent">经办人</string>

    <string name="personal_expenses">个人花费</string>
    <string name="personal_advance">个人垫付</string>
    <string name="personal_collections">待收款</string>
    <string name="personal_payment">待结款</string>

</resources>
