<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettlementDetailActivityActivity">

    <TextView
        android:id="@+id/total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textSize="38sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/personal_expenses"
        android:textSize="25sp"
        android:textStyle="italic|bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/averageRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/personal_advance"
        android:textSize="25sp"
        android:textStyle="italic|bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/advanceRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/personal_collections"
        android:textSize="25sp"
        android:textStyle="italic|bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/collectionsRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/personal_payment"
        android:textSize="25sp"
        android:textStyle="italic|bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/paymentRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never" />
</LinearLayout>